--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ h1 {
   background-color: #1e5f74;
   border: 2px solid white;
   border-radius: 12px;
+  box-shadow: 0 0 18px rgba(0,0,0,.8);
   padding: 8px;
   font-size: 20px;
   text-align: center;
